--- a/ViewStructure/ViewStructure/ViewStructure.csproj
+++ b/ViewStructure/ViewStructure/ViewStructure.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Models\" />
+    <Folder Include="wwwroot\js\" />
   </ItemGroup>
 
 </Project>
