--- a/IocContainer/IocContainer/IocContainer.csproj
+++ b/IocContainer/IocContainer/IocContainer.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <Folder Include="Models\" />
+    <Folder Include="Logs\" />
     <Folder Include="Views\" />
   </ItemGroup>
 
