CodeFirst İle Veritabanı Bağlantısı

--- a/CodeFirst/CodeFirst/appsettings.json
+++ b/CodeFirst/CodeFirst/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Mssql" : "Server=DESKTOP-EJL9033\tMSSQLSERVER1;Database=BookStore;uid=sa;pwd=123"
+    "Mssql" : "Server=DESKTOP-EJL9033\\MSSQLSERVER1;Database=BookStore;uid=sa;pwd=123"
   }
 }
